# trainer_trader

./: .pre-commit-config.yaml  README.md  docker-compose.yml  post-gen.sh  pyproject.toml
.github/workflows/: pull_request_opened.yaml  sonar.yaml
docker/system/: DOCKERFILE
ml_app/: config.py  ml_app.py
ml_app/app/: __init__.py
ml_app/app/main/: backtest.py  realtime.py  training.py
ml_app/app/optimizers/: fitness.py  pso.py
ml_app/app/strategy/: meuchapa.py
ml_app/app/utils/: general.py  indicators.py  loaders.py
results/: allmoves_ASH.csv  allmoves_ASH_.csv  allmoves_SPEAR.csv  monthly_ASH.csv  monthly_ASH_.csv  monthly_SPEAR.csv
