[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = ["FabioCaffarelloTC <fabio.caffarello@tc.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
pytest = "^7.1.1"
pytest-flask = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
